import { formValidation } from '../validation';
import { Map } from 'immutable';

describe('formValidation', () => {
  it('returns proper object when required fields are provided', () => {
    const values = new Map({
      name: 'mockName',
      clientDisconnectMinutes: 5,
      whatsappId: 'mockId',
    });
    expect(formValidation(values)).toMatchSnapshot();
  });
  it('returns proper object (errors) when required fields are not provided', () => {
    const values = new Map({
      name: '',
      clientDisconnectMinutes: null,
      whatsappId: null,
    });
    expect(formValidation(values)).toMatchSnapshot();
  });
  it('returns proper object (errors) when wrong values are provided', () => {
    const values = new Map({
      name: undefined,
      clientDisconnectMinutes: 1441,
      whatsappId: undefined,
    });
    expect(formValidation(values)).toMatchSnapshot();
  });
});
