// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`formValidation returns proper object (errors) when required fields are not provided 1`] = `
Object {
  "clientDisconnectMinutes": false,
  "name": "Please enter a name",
  "whatsappId": "Please choose an app",
}
`;

exports[`formValidation returns proper object (errors) when wrong values are provided 1`] = `
Object {
  "clientDisconnectMinutes": "Must be less than or equal to 1440",
  "name": "Please enter a name",
  "whatsappId": "Please choose an app",
}
`;

exports[`formValidation returns proper object when required fields are provided 1`] = `
Object {
  "clientDisconnectMinutes": false,
  "name": false,
  "whatsappId": false,
}
`;
